--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- PDF Generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <!-- Supabase Client -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <!-- OCR for VIN Scanning -->
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 
@@ -49,81 +51,85 @@
 
     <!-- Main Logic Bundled for file:// Access -->
     <script type="text/babel">
-        // --- 1. DB Service ---
-        const STORAGE_KEYS = {
-            INSPECTIONS: 'car_inspect_inspections',
-            USER: 'car_inspect_user'
-        };
+        // --- 1. Supabase Config & DB Service ---
+        const SUPABASE_URL = 'https://xqzcdwitxnlijpyrckmk.supabase.co';
+        const SUPABASE_KEY = 'sb_publishable_CGhGAwTLQHiXIw-EPH9KIA_8ZfZN4H7';
+        const supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
         const delay = (ms) => new Promise(resolve => setTimeout(resolve, ms));
 
         const db = {
-            // Inspections
             async getInspections() {
-                await delay(300);
-                const data = localStorage.getItem(STORAGE_KEYS.INSPECTIONS);
-                return data ? JSON.parse(data) : [];
-            },
+                try {
+                    const { data, error } = await supabaseClient
+                        .from('inspecciones')
+                        .select('*')
+                        .order('created_at', { ascending: false });
 
-            async getInspectionByVin(vinFragment) {
-                await delay(300);
-                const all = await this.getInspections();
-                return all.filter(i => i.vehicleDetails.vin.endsWith(vinFragment));
+                    if (error) throw error;
+
+                    return data.map(i => ({
+                        ...i,
+                        id: i.id,
+                        createdAt: i.created_at,
+                        vehicleDetails: i.datos_vehiculo,
+                        condition: i.condicion,
+                        tireDepth: i.tire_depth,
+                        damages: i.damages || [],
+                        photos: i.fotos || [],
+                        notes: i.notes || ''
+                    }));
+                } catch (e) {
+                    console.error("Fetch error:", e);
+                    return [];
+                }
             },
 
             async saveInspection(inspection) {
-                await delay(500);
-                const all = await this.getInspections();
-                const newInspection = {
-                    ...inspection,
-                    id: crypto.randomUUID(),
-                    createdAt: new Date().toISOString(),
-                    status: 'Assessment Complete'
-                };
+                try {
+                    const { data, error } = await supabaseClient
+                        .from('inspecciones')
+                        .insert([{
+                            vin: inspection.vehicleDetails.vin,
+                            datos_vehiculo: inspection.vehicleDetails,
+                            condicion: inspection.condition,
+                            tire_depth: inspection.tireDepth,
+                            damages: inspection.damages,
+                            fotos: inspection.photos,
+                            notes: inspection.notes,
+                            usuario_nombre: inspection.vehicleDetails.checkedInBy
+                        }])
+                        .select();
 
-                all.unshift(newInspection);
-                localStorage.setItem(STORAGE_KEYS.INSPECTIONS, JSON.stringify(all));
-                return newInspection;
+                    if (error) throw error;
+                    return data[0];
+                } catch (e) {
+                    console.error("Save error:", e);
+                    throw e;
+                }
             },
 
-            // Approvals
-            async createApprovalRequest(inspectionId, requestData) {
-                await delay(500);
-                const all = await this.getInspections();
-                const index = all.findIndex(i => i.id === inspectionId);
-                if (index === -1) throw new Error("Inspection not found");
-
-                all[index].approvalRequest = {
-                    ...requestData,
-                    status: 'Pending',
-                    requestedAt: new Date().toISOString()
-                };
-
-                localStorage.setItem(STORAGE_KEYS.INSPECTIONS, JSON.stringify(all));
-                return all[index];
-            },
-
-            // External APIs
             async decodeVin(vin) {
                 try {
                     const response = await fetch(`https://vpic.nhtsa.dot.gov/api/vehicles/decodevinvalues/${vin}?format=json`);
                     const data = await response.json();
                     const results = data.Results[0];
-
                     if (results && results.Make) {
                         return {
                             year: results.ModelYear,
                             make: results.Make,
                             model: results.Model,
-                            bodyClass: results.BodyClass,
                             success: true
                         };
                     }
-                    return { success: false, error: 'Could not decode VIN' };
+                    return { success: false };
                 } catch (e) {
-                    console.error("VIN Decode error:", e);
-                    return { success: false, error: e.message };
+                    return { success: false };
                 }
+            },
+
+            getStorageSize() {
+                return "Unlimited (Cloud)";
             }
         };
 
@@ -797,14 +803,54 @@
         );
 
         const PhotosSection = ({ photos, onAdd, onRemove, readOnly }) => {
-            const handleFileChange = (e) => {
+            const compressImage = (dataUrl) => {
+                return new Promise((resolve) => {
+                    const img = new Image();
+                    img.src = dataUrl;
+                    img.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        let width = img.width;
+                        let height = img.height;
+
+                        // Max dimension 1024px
+                        const MAX_SIZE = 1024;
+                        if (width > height) {
+                            if (width > MAX_SIZE) {
+                                height *= MAX_SIZE / width;
+                                width = MAX_SIZE;
+                            }
+                        } else {
+                            if (height > MAX_SIZE) {
+                                width *= MAX_SIZE / height;
+                                height = MAX_SIZE;
+                            }
+                        }
+
+                        canvas.width = width;
+                        canvas.height = height;
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+
+                        // Compress to JPEG with 0.7 quality
+                        resolve(canvas.toDataURL('image/jpeg', 0.7));
+                    };
+                });
+            };
+
+            const handleFileChange = async (e) => {
                 const file = e.target.files[0];
                 if (!file) return;
 
                 const reader = new FileReader();
                 reader.readAsDataURL(file);
-                reader.onload = () => {
-                    onAdd({ name: file.name, url: reader.result });
+                reader.onload = async () => {
+                    try {
+                        const compressedUrl = await compressImage(reader.result);
+                        onAdd({ name: file.name, url: compressedUrl });
+                    } catch (err) {
+                        console.error("Compression failed", err);
+                        onAdd({ name: file.name, url: reader.result }); // Fallback
+                    }
                 };
                 reader.onerror = (error) => console.error('Error: ', error);
 
@@ -937,8 +983,12 @@
                     alert('Inspection Saved Successfully!');
                     if (onSuccess) onSuccess();
                 } catch (err) {
-                    console.error(err);
-                    alert('Error saving inspection');
+                    console.error("Save error:", err);
+                    if (err.name === 'QuotaExceededError' || err.message.includes('quota')) {
+                        alert("ERROR: Storage is full! Your browser's local memory (localStorage) cannot hold more photos. Please delete old inspections or take fewer/lower quality photos.");
+                    } else {
+                        alert('Error saving inspection: ' + err.message);
+                    }
                 } finally {
                     setSubmitting(false);
                 }
@@ -1235,6 +1285,9 @@
                         <button className="btn btn-primary" onClick={() => window.location.hash = '#new-inspection'} style={{ justifyContent: 'center', fontSize: '1.1rem', padding: '1rem' }}>
                             + Start New Inspection
                         </button>
+                        <div style={{ textAlign: 'center', fontSize: '0.8rem', color: 'var(--text-muted)' }}>
+                            Cloud Database Connected (Supabase)
+                        </div>
                         <button className="btn btn-outline" onClick={() => window.location.hash = '#approvals'} style={{ justifyContent: 'center' }}>
                             Request Approval
                         </button>
